--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Morganne Borowczyk | Home</title>
     <link rel="stylesheet" href="assets/style/css/app.css">
     <link href="https://fonts.googleapis.com/css?family=PT+Sans|Playfair+Display:900i" rel="stylesheet">
+    <meta description="Morganne Borowczyk is a French designer and illustrator">
   </head>
   <body>
     <div class="container">
