Coming soon screen

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
       <div class="intro">
         <h1>Morganne Borowczyk</h1>
         <h2>Designer and illustrator from France</h2>
+        <p>Coming Soon</p>
       </div>
-      <p>Coming Soon</p><img src="assets/images/work/dejeuner-sur-lherbe.jpg">
     </div>
   </body>
 </html>
