--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Morganne Borowczyk | About</title>
     <link rel="stylesheet" href="assets/style/css/app.css">
-    <link href="https://fonts.googleapis.com/css?family=PT+Sans|Playfair+Display:900i" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto|Playfair+Display:900i" rel="stylesheet">
     <meta description="Morganne Borowczyk is a French designer and illustrator">
   </head>
   <body>
@@ -27,12 +27,18 @@
           </div>
         </footer>
       </div>
-      <div class="content"><img src="" alt="">
-        <h1>Design & Illustration</h1>
-        <p>Hi ! My name is Morganne Borowczyk. I am a design student at ECV Lille (France).</p>
-        <p>Before going back to school, I'd been a webdesigner at Wexperience, a web agency in Roubaix focused on UX design. My work there consisted of many things, including wireframing, front-end development, AB testing, analyzing focus groups and user testing.</p>
-        <p>This year I've decided to dedicate myself to learning again and to dive more into the creative process of things. Drawing has always been a big part of my life and I am very happy to be able to focus on more illustrated projects.</p>
-        <p>I've been doing a lot of work for bands of many styles ! Rock, Folk, House</p>
+      <div class="content">
+        <div class="id">
+          <div class="visuel"><img src="assets/images/morganne-borowczyk.jpg" alt="Portrait of Morganne Borowczyk"></div>
+          <div class="text">
+            <h1>Get to know me</h1>
+            <p>Hi ! My name is Morganne Borowczyk. I am a design student at ECV Lille (France).</p>
+            <p>Before going back to school, I was a webdesigner at Wexperience, a web agency in Roubaix focused on UX design. My work there consisted of many things, including wireframing, front-end development, AB testing, analyzing focus groups and user testing.</p>
+            <p>This year I've decided to dedicate myself to learning again and to focus on the creative part of the work. Drawing has always been a big part of my life and I am very happy to be able to focus on more illustrated projects.</p>
+            <p>I've been doing a lot of work for bands of many styles! Rock, Folk, House music, it's always a pleasure to work with artists.</p>
+            <p>If you wish to make a commission please feel free to contact me hello@morganneborowczyk.design</p>
+          </div>
+        </div>
       </div>
     </main>
   </body>
