--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Morganne Borowczyk | Home</title>
     <link rel="stylesheet" href="assets/style/css/app.css">
-    <link href="https://fonts.googleapis.com/css?family=PT+Sans|Playfair+Display:900i" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto|Playfair+Display:900i" rel="stylesheet">
     <meta description="Morganne Borowczyk is a French designer and illustrator">
   </head>
   <body>
