migration to new theme wip

--- a/index.html
+++ b/index.html
@@ -7,26 +7,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Morganne Borowczyk | Home</title>
     <link rel="stylesheet" href="assets/style/css/app.css">
-    <link href="https://fonts.googleapis.com/css?family=Roboto|Playfair+Display:900i" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Bitter:400,400i,700" rel="stylesheet">
     <meta description="Morganne Borowczyk is a French designer and illustrator">
   </head>
   <body>
-    <main class="container">
-      <div class="sidebar">
-        <p class="h1">Morganne Borowczyk</p>
-        <p class="h2">Illustrator and designer : Portfolio</p>
-        <nav><a href="" alt="">About me</a>
-          <p>Projects:</p><a href="" alt="">Toile de Jouy</a><a href="" alt="">Déjeuner sur l'Herbe</a><a href="" alt="">One More Time with Feeling</a><a href="" alt="">Holispark</a><a href="" alt="">Verminoise</a><a href="" alt="">Jethro Morris</a><a href="" alt="">Balmonts</a><a href="" alt="">Tarot deck</a>
+    <header>
+      <div class="container"><a href="/" class="brand">Morganne Borowczyk</a>
+        <nav>
+          <div class="toggle"><span></span></div>
+          <ul>
+            <li><a>Portfolio</a></li>
+          </ul>
         </nav>
-        <footer>
-          <div class="container">
-            <div class="social"><a href="http://instagram.com/morganneborowczyk">instagram</a><a href="http://facebook.com/mborowczykillustration">facebook</a><a href="http://dribbble.com/morganneborowczyk">dribbble</a></div>
-            <div class="copyright">
-              <p>© Morganne Borowczyk 2018 — All rights reserved.</p>
-            </div>
-          </div>
-        </footer>
       </div>
+    </header>
+    <main class="container">
       <div class="content">
         <div class="grid"><a href="" title="Project name" class="grid-item"><img src="assets/images/work/illu-MAD.jpg" alt="project name"></a><a href="" title="Project name" class="grid-item"><img src="assets/images/work/dejeuner-sur-lherbe.jpg" alt="project name"></a><a href="" title="Project name" class="grid-item"><img src="assets/images/work/toile-de-jouy.png" alt="project name"></a></div>
         <script src="assets/js/masonry.pkgd.min.js"></script>
