--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Morganne Borowczyk | Home</title>
+    <meta description="Morganne Borowczyk is a French designer and illustrator">
     <link rel="stylesheet" href="assets/style/css/app.css">
     <link href="https://fonts.googleapis.com/css?family=Bitter:400,400i,700" rel="stylesheet">
-    <meta description="Morganne Borowczyk is a French designer and illustrator">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   </head>
   <body>
     <header>
@@ -23,14 +24,31 @@
     </header>
     <main class="container">
       <div class="content">
-        <div class="grid"><a href="" title="Project name" class="grid-item"><img src="assets/images/work/illu-MAD.jpg" alt="project name"></a><a href="" title="Project name" class="grid-item"><img src="assets/images/work/dejeuner-sur-lherbe.jpg" alt="project name"></a><a href="" title="Project name" class="grid-item"><img src="assets/images/work/toile-de-jouy.png" alt="project name"></a></div>
+        <div class="grid">
+          <div class="grid-sizer"></div>
+          <div class="gutter-sizer"></div><a href="" title="Project name" class="grid-item"><img src="assets/images/work/illu-MAD.jpg" alt="project name"></a><a href="" title="Project name" class="grid-item"><img src="assets/images/work/dejeuner-sur-lherbe.jpg" alt="project name"></a><a href="" title="Project name" class="grid-item"><img src="assets/images/work/toile-de-jouy.png" alt="project name"></a>
+        </div>
         <script src="assets/js/masonry.pkgd.min.js"></script>
         <script>
-          var msnry = new Masonry( '.grid', {
-          itemSelector: '.grid-item'
+          $('.grid').masonry({
+            // set itemSelector so .grid-sizer is not used in layout
+            itemSelector: '.grid-item',
+            // use element for option
+            columnWidth: '.grid-sizer',
+            gutter: '.gutter-sizer',
+            percentPosition: true
           });
         </script>
       </div>
     </main>
+    <footer>
+      <div class="container">
+        <div class="social"><a href="http://instagram.com/morganneborowczyk">instagram</a><a href="http://facebook.com/mborowczykillustration">facebook</a><a href="http://dribbble.com/morganneborowczyk">dribbble</a></div>
+        <div class="copyright">
+          <p>© Morganne Borowczyk 2018 — All rights reserved.</p>
+        </div>
+      </div>
+    </footer>
+    <script src="assets/js/header.js"></script>
   </body>
 </html>
