--- a/index.html
+++ b/index.html
@@ -80,9 +80,11 @@
         <div class="grid">
           <div class="grid-sizer"></div>
           <div class="gutter-sizer"></div>
-          <div title="Project name" class="grid-item"><img src="assets/images/work/illu-MAD.jpg" alt="project name"></div>
-          <div title="Project name" class="grid-item"><img src="assets/images/work/dejeuner-sur-lherbe.jpg" alt="project name"></div>
-          <div title="Project name" class="grid-item"><img src="assets/images/work/toile-de-jouy.png" alt="project name"></div>
+          <div class="grid-item"><img src="assets/images/work/MAD-1.jpg" alt="project name"></div>
+          <div class="grid-item"><img src="assets/images/work/MAD-2.jpg" alt="project name"></div>
+          <div class="grid-item"><img src="assets/images/work/MAD-3.jpg" alt="project name"></div>
+          <div class="grid-item"><img src="assets/images/work/dejeuner-sur-lherbe.jpg" alt="project name"></div>
+          <div class="grid-item"><img src="assets/images/work/toile-de-jouy.png" alt="project name"></div>
         </div>
         <script src="assets/js/masonry.pkgd.min.js"></script>
         <script>
