--- a/index.html
+++ b/index.html
@@ -17,12 +17,7 @@
       </div>
     </header>
     <main class="container">
-      <div class="content">
-        <div class="grid">
-          <div class="grid-sizer"></div>
-          <div class="gutter-sizer"></div>
-          <div class="grid-item grid-item--width2"><img src="assets/images/work/dejeuner-sur-lherbe.jpg" alt="project name"></div>
-        </div>
+      <div class="content"><img src="assets/images/work/dejeuner-sur-lherbe.jpg" alt="project name">
         <script src="assets/js/masonry.pkgd.min.js"></script>
         <script>
           $('.grid').masonry({
