--- a/about.html
+++ b/about.html
@@ -76,7 +76,7 @@
     <main class="container">
       <div class="content">
         <div class="id">
-          <div class="visuel"><img src="assets/images/morganne-borowczyk.jpg" alt="Portrait of Morganne Borowczyk">
+          <div class="visuel">
             <h1>Get to know me</h1>
           </div>
           <div class="text">
@@ -84,7 +84,9 @@
             <p>Before going back to school, I was a webdesigner at Wexperience, a web agency in Roubaix focused on UX design. My work there consisted of many things, including wireframing, front-end development, AB testing, analyzing focus groups and user testing.</p>
             <p>This year I've decided to dedicate myself to learning again and to focus on the creative part of the work. Drawing has always been a big part of my life and I am very happy to be able to focus on more illustrated projects.</p>
             <p>I've been doing a lot of work for bands of many styles! Rock, Folk, House music, it's always a pleasure to work with artists.</p>
-            <p>If you wish to make a commission please feel free to <a href="...">contact me</a>.</p>
+            <p class="cta">If you wish to make a commission please feel free to get in touch!</p>
+            <p class="txt-center"><a href="..." class="btn btn-large">Hire me</a>
+            </p>
           </div>
         </div>
       </div>
