--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
           <li><a href="/">Portfolio</a></li>
           <li><a target="blank_" href="http://www.mborowczyk.bigcartel.com">Shop</a></li>
           <li><a href="/about">About me</a></li>
-          <li><a href="/contact">Contact</a></li>
+          <li><a href="mailto:hello@morganneborowczyk.design">Contact</a></li>
         </ul>
             <ul class="social">
               <li><a target="blank_" href="http://www.instagram.com/morganneborowczyk">
@@ -85,7 +85,7 @@
             <p>This year I've decided to dedicate myself to learning again and to focus on developing my creativity. Drawing has always been a big part of my life and I am very happy to be able to focus on more illustrated projects.</p>
             <p>I've been doing a lot of work for bands of many styles! Rock, Folk, House music, it's always a pleasure to work with artists.</p>
             <p class="cta">If you wish to make a commission please feel free to get in touch!</p>
-            <p><a href="..." class="btn btn-large">Hire me</a>
+            <p><a href="mailto:hello@morganneborowczyk.design" class="btn btn-large">Hire me</a>
             </p>
           </div>
         </div>
