--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <li><a href="/">Portfolio</a></li>
           <li><a target="blank_" href="http://www.mborowczyk.bigcartel.com">Shop</a></li>
           <li><a href="/about">About me</a></li>
-          <li><a href="/contact">Contact</a></li>
+          <li><a href="mailto:hello@morganneborowczyk.design">Contact</a></li>
         </ul>
             <ul class="social">
               <li><a target="blank_" href="http://www.instagram.com/morganneborowczyk">
