--- a/about.html
+++ b/about.html
@@ -84,8 +84,7 @@
             <p>Before going back to school, I was a webdesigner at Wexperience, a web agency in Roubaix focused on UX design. My work there consisted of many things, including wireframing, front-end development, AB testing, analyzing focus groups and user testing.</p>
             <p>This year I've decided to dedicate myself to learning again and to focus on developing my creativity. Drawing has always been a big part of my life and I am very happy to be able to focus on more illustrated projects.</p>
             <p>I've been doing a lot of work for bands of many styles! Rock, Folk, House music, it's always a pleasure to work with artists.</p>
-            <p class="cta">If you wish to make a commission please feel free to get in touch!</p>
-            <p><a href="mailto:hello@morganneborowczyk.design" class="btn btn-large">Hire me</a>
+            <p class="cta">If you wish to make a commission please feel free to get in touch!<a href="mailto:hello@morganneborowczyk.design" class="btn btn-large">Hire me</a>
             </p>
           </div>
         </div>
