add projects to grid

--- a/index.html
+++ b/index.html
@@ -83,36 +83,6 @@
                   <h2>Musée des Arts Décoratifs</h2>
                   <div class="close">Close</div><img src="assets/images/work/MAD-1.jpg"><img src="assets/images/work/MAD-2.jpg"><img src="assets/images/work/MAD-3.jpg">
                 </div>
-              </div><a href="#modal-one-more-time" class="grid-item"><img src="assets/images/work/one-more-time-with-feeling__an-act-of-revenge.jpg" alt="One More Time with Feeling"></a>
-              <div id="modal-one-more-time" class="modal">
-                <div class="modal-content">
-                  <h2>One More Time with Feeling</h2>
-                  <div class="close">Close</div><img src="assets/images/work/one-more-time-with-feeling__an-act-of-revenge.jpg"><img src="assets/images/work/one-more-time-with-feeling__women-are-like-fucking-3d.jpg"><img src="assets/images/work/one-more-time-with-feeling__girl-in-amber.jpg">
-                </div>
-              </div><a href="#modal-balmonts" class="grid-item"><img src="assets/images/work/balmonts__mockup-front.jpg" alt="Balmonts"></a>
-              <div id="modal-balmonts" class="modal">
-                <div class="modal-content">
-                  <h2>Balmonts</h2>
-                  <div class="close">Close</div><img src="assets/images/work/balmonts__mockup-front.jpg"><img src="assets/images/work/balmonts__mockup-back.jpg">
-                </div>
-              </div><a href="#modal-verminoise" class="grid-item"><img src="assets/images/work/verminoise__pochette-avant.jpg" alt="Verminoise"></a>
-              <div id="modal-verminoise" class="modal">
-                <div class="modal-content">
-                  <h2>Verminoise</h2>
-                  <div class="close">Close</div><img src="assets/images/work/verminoise__pochette-avant.jpg">
-                </div>
-              </div><a href="#modal-doomsnakes" class="grid-item"><img src="assets/images/work/collab__doomsnakes.jpg" alt="Collaboration with Manchester (UK) artist Doomsnakes"></a>
-              <div id="modal-doomsnakes" class="modal">
-                <div class="modal-content">
-                  <h2>Collaboration with Manchester (UK) artist Doomsnakes</h2>
-                  <div class="close">Close</div><img src="assets/images/work/collab__doomsnakes.jpg">
-                </div>
-              </div><a href="#modal-holispark" class="grid-item"><img src="assets/images/work/holispark__tshirt__cut-the-rope.jpg" alt="Holispark"></a>
-              <div id="modal-holispark" class="modal">
-                <div class="modal-content">
-                  <h2>Holispark</h2>
-                  <div class="close">Close</div><img src="assets/images/work/holispark__tshirt__cut-the-rope.jpg"><img src="assets/images/work/holispark__totebags.jpg">
-                </div>
               </div><a href="#modal-dejeuner" class="grid-item"><img src="assets/images/work/dejeuner-sur-lherbe.jpg" alt="Déjeuner sur l'Herbe"></a>
               <div id="modal-dejeuner" class="modal">
                 <div class="modal-content">
@@ -124,6 +94,42 @@
                 <div class="modal-content">
                   <h2>Toile de Jouy</h2>
                   <div class="close">Close</div><img src="assets/images/work/toile-de-jouy.png">
+                </div>
+              </div><a href="#modal-verminoise" class="grid-item"><img src="assets/images/work/verminoise__pochette-avant.jpg" alt="Verminoise"></a>
+              <div id="modal-verminoise" class="modal">
+                <div class="modal-content">
+                  <h2>Verminoise</h2>
+                  <div class="close">Close</div><img src="assets/images/work/verminoise__pochette-avant.jpg">
+                </div>
+              </div><a href="#modal-jethro" class="grid-item"><img src="assets/images/work/jethro-morris__mockup.jpg" alt="Jethro Morris"></a>
+              <div id="modal-jethro" class="modal">
+                <div class="modal-content">
+                  <h2>Jethro Morris</h2>
+                  <div class="close">Close</div><img src="assets/images/work/jethro-morris__mockup.jpg">
+                </div>
+              </div><a href="#modal-holispark" class="grid-item"><img src="assets/images/work/holispark__tshirt__cut-the-rope.jpg" alt="Holispark"></a>
+              <div id="modal-holispark" class="modal">
+                <div class="modal-content">
+                  <h2>Holispark</h2>
+                  <div class="close">Close</div><img src="assets/images/work/holispark__tshirt__cut-the-rope.jpg"><img src="assets/images/work/holispark__totebags.jpg">
+                </div>
+              </div><a href="#modal-balmonts" class="grid-item"><img src="assets/images/work/balmonts__mockup-front.jpg" alt="Balmonts"></a>
+              <div id="modal-balmonts" class="modal">
+                <div class="modal-content">
+                  <h2>Balmonts</h2>
+                  <div class="close">Close</div><img src="assets/images/work/balmonts__mockup-front.jpg"><img src="assets/images/work/balmonts__mockup-back.jpg">
+                </div>
+              </div><a href="#modal-doomsnakes" class="grid-item"><img src="assets/images/work/collab__doomsnakes.jpg" alt="Collaboration with Manchester (UK) artist Doomsnakes"></a>
+              <div id="modal-doomsnakes" class="modal">
+                <div class="modal-content">
+                  <h2>Collaboration with Manchester (UK) artist Doomsnakes</h2>
+                  <div class="close">Close</div><img src="assets/images/work/collab__doomsnakes.jpg">
+                </div>
+              </div><a href="#modal-one-more-time" class="grid-item"><img src="assets/images/work/one-more-time-with-feeling__an-act-of-revenge.jpg" alt="One More Time with Feeling"></a>
+              <div id="modal-one-more-time" class="modal">
+                <div class="modal-content">
+                  <h2>One More Time with Feeling</h2>
+                  <div class="close">Close</div><img src="assets/images/work/one-more-time-with-feeling__an-act-of-revenge.jpg"><img src="assets/images/work/one-more-time-with-feeling__women-are-like-fucking-3d.jpg"><img src="assets/images/work/one-more-time-with-feeling__girl-in-amber.jpg">
                 </div>
               </div>
         </div>
