vampires from space

--- a/index.html
+++ b/index.html
@@ -125,6 +125,12 @@
                   <h2>Collaboration with Manchester (UK) artist Doomsnakes</h2>
                   <div class="close">Close</div><img src="assets/images/work/collab__doomsnakes.jpg">
                 </div>
+              </div><a href="#modal-vampires" class="grid-item"><img src="assets/images/work/vampires-from-space.jpg" alt="Vampires from Space"></a>
+              <div id="modal-vampires" class="modal">
+                <div class="modal-content">
+                  <h2>Vampires from Space</h2>
+                  <div class="close">Close</div><img src="assets/images/work/vampires-from-space.jpg">
+                </div>
               </div><a href="#modal-one-more-time" class="grid-item"><img src="assets/images/work/one-more-time-with-feeling__an-act-of-revenge.jpg" alt="One More Time with Feeling"></a>
               <div id="modal-one-more-time" class="modal">
                 <div class="modal-content">
