--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                   <h2>Musée des Arts Décoratifs</h2>
                   <div class="close">Close</div><img src="assets/images/work/MAD-2.jpg"><img src="assets/images/work/MAD-1.jpg"><img src="assets/images/work/MAD-3.jpg">
                 </div>
-              </div><a href="#modal-dejeuner" class="grid-item"><img src="assets/images/work/dejeuner-sur-lherbe.jpg" alt="Déjeuner sur l'Herbe"></a>
+              </div><a href="#modal-dejeuner" class="grid-item width2"><img src="assets/images/work/dejeuner-sur-lherbe.jpg" alt="Déjeuner sur l'Herbe"></a>
               <div id="modal-dejeuner" class="modal">
                 <div class="modal-content">
                   <h2>Déjeuner sur l'Herbe</h2>
@@ -95,17 +95,17 @@
                   <h2>Toile de Jouy</h2>
                   <div class="close">Close</div><img src="assets/images/work/toile-de-jouy.png">
                 </div>
-              </div><a href="#modal-verminoise" class="grid-item"><img src="assets/images/work/verminoise__pochette-avant.jpg" alt="Verminoise"></a>
-              <div id="modal-verminoise" class="modal">
-                <div class="modal-content">
-                  <h2>Verminoise</h2>
-                  <div class="close">Close</div><img src="assets/images/work/verminoise__pochette-avant.jpg">
-                </div>
               </div><a href="#modal-jethro" class="grid-item"><img src="assets/images/work/jethro-morris__mockup.jpg" alt="Jethro Morris"></a>
               <div id="modal-jethro" class="modal">
                 <div class="modal-content">
                   <h2>Jethro Morris</h2>
                   <div class="close">Close</div><img src="assets/images/work/jethro-morris__mockup.jpg">
+                </div>
+              </div><a href="#modal-verminoise" class="grid-item"><img src="assets/images/work/verminoise__pochette-avant.jpg" alt="Verminoise"></a>
+              <div id="modal-verminoise" class="modal">
+                <div class="modal-content">
+                  <h2>Verminoise</h2>
+                  <div class="close">Close</div><img src="assets/images/work/verminoise__pochette-avant.jpg">
                 </div>
               </div><a href="#modal-holispark" class="grid-item"><img src="assets/images/work/holispark__tshirt__cut-the-rope.jpg" alt="Holispark"></a>
               <div id="modal-holispark" class="modal">
@@ -130,6 +130,18 @@
                 <div class="modal-content">
                   <h2>Vampires from Space</h2>
                   <div class="close">Close</div><img src="assets/images/work/vampires-from-space.jpg">
+                </div>
+              </div><a href="#modal-shadow" class="grid-item width2"><img src="assets/images/work/shadow-of-a.jpg" alt="Shadow of A"></a>
+              <div id="modal-shadow" class="modal">
+                <div class="modal-content">
+                  <h2>Shadow of A</h2>
+                  <div class="close">Close</div><img src="assets/images/work/shadow-of-a.jpg">
+                </div>
+              </div><a href="#modal-cave" class="grid-item"><img src="assets/images/work/cave.jpg" alt="Cave"></a>
+              <div id="modal-cave" class="modal">
+                <div class="modal-content">
+                  <h2>Cave</h2>
+                  <div class="close">Close</div><img src="assets/images/work/cave.jpg">
                 </div>
               </div><a href="#modal-one-more-time" class="grid-item"><img src="assets/images/work/one-more-time-with-feeling__an-act-of-revenge.jpg" alt="One More Time with Feeling"></a>
               <div id="modal-one-more-time" class="modal">
