--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                   <h2>Musée des Arts Décoratifs</h2>
                   <div class="close">Close</div><img src="assets/images/work/MAD-2.jpg"><img src="assets/images/work/MAD-1.jpg"><img src="assets/images/work/MAD-3.jpg">
                 </div>
-              </div><a href="#modal-dejeuner" class="grid-item width2"><img src="assets/images/work/dejeuner-sur-lherbe.jpg" alt="Déjeuner sur l'Herbe"></a>
+              </div><a href="#modal-dejeuner" class="grid-item"><img src="assets/images/work/dejeuner-sur-lherbe.jpg" alt="Déjeuner sur l'Herbe"></a>
               <div id="modal-dejeuner" class="modal">
                 <div class="modal-content">
                   <h2>Déjeuner sur l'Herbe</h2>
@@ -131,7 +131,7 @@
                   <h2>Vampires from Space</h2>
                   <div class="close">Close</div><img src="assets/images/work/vampires-from-space.jpg">
                 </div>
-              </div><a href="#modal-shadow" class="grid-item width2"><img src="assets/images/work/shadow-of-a.jpg" alt="Shadow of A"></a>
+              </div><a href="#modal-shadow" class="grid-item"><img src="assets/images/work/shadow-of-a.jpg" alt="Shadow of A"></a>
               <div id="modal-shadow" class="modal">
                 <div class="modal-content">
                   <h2>Shadow of A</h2>
